--- a/templates/header.go.tmpl
+++ b/templates/header.go.tmpl
@@ -5,6 +5,7 @@ package {{ .Package }}
 import (
 	"fmt"
 
+ 	//nolint:staticcheck
 	. "github.com/Emyrk/zedgen/relbuilder"
 	v1 "github.com/authzed/authzed-go/proto/authzed/api/v1"
 	"github.com/authzed/gochugaru/rel"
